--- a/app/webroot/css/main-style-media.css
+++ b/app/webroot/css/main-style-media.css
@@ -19,10 +19,10 @@
         width: 45%;
     }
     .jcarousel-wrapper {
-        width: 500px;
+        width: 450px;
     }
     .jcarousel li {
-        width: 500px !important;
+        width: 450px !important;
     }
 }
 
@@ -59,16 +59,6 @@
     }
     .content {
         flex-direction: row;
-    }
-    .left-nav {
-        position: sticky;
-        top: 0;
-        bottom: 0;
-        width: 200px;
-    }
-    .filter-group .item {
-        display: block;
-        margin-right: 40px;
     }
     #header .cart {
         padding-top: 25px;
@@ -109,9 +99,33 @@
     .jcarousel li {
         width: 680px !important;
     }
+    .left-nav {
+        position: sticky;
+        top: 0;
+        bottom: 0;
+        width: 200px;
+    }
+    .filter-group .item {
+        display: block;
+    }
+    .left-nav .left-nav__button {
+        display: none;
+    }
+    .left-nav .filter-group {
+        display: block;
+    }
+    .left-nav .title {
+        margin-bottom: 5px;
+    }
+    .left-nav {
+        padding-bottom: 10px;
+    }
+    .bt-style1 {
+        margin-top: 10px;
+    }
 }
 
-@media screen and (min-width: 1140px) {
+@media screen and (min-width: 1200px) {
     .wrap {
         max-width: var(--container-xl)
     }
@@ -141,23 +155,23 @@
     }
 }
 
-@media screen and (min-width: 1320px) {
-    .wrap {
-        max-width: var(--container-xxl)
-    }
-    #header #nav {
-        max-width: var(--container-xxl)
-    }
-    .boxList {
-        width: 16%;
-    }
-    .selection .item {
-        width: 18%;
-    }
-    .jcarousel-wrapper {
-        width: 1048px;
-    }
-    .jcarousel li {
-        width: 1048px !important;
-    }
-}
+/*@media screen and (min-width: 1320px) {*/
+/*    .wrap {*/
+/*        max-width: var(--container-xxl)*/
+/*    }*/
+/*    #header #nav {*/
+/*        max-width: var(--container-xxl)*/
+/*    }*/
+/*    .boxList {*/
+/*        width: 16%;*/
+/*    }*/
+/*    .selection .item {*/
+/*        width: 18%;*/
+/*    }*/
+/*    .jcarousel-wrapper {*/
+/*        width: 1048px;*/
+/*    }*/
+/*    .jcarousel li {*/
+/*        width: 1048px !important;*/
+/*    }*/
+/*}*/
