--- a/app/webroot/css/main-style.css
+++ b/app/webroot/css/main-style.css
@@ -25,6 +25,7 @@ body {
 }
 .wrap {
   width: 100%;
+  min-width: 300px;
   max-width: calc(var(--container-sm) - 30px);
   margin: auto;
   padding-right: 15px;
@@ -223,7 +224,7 @@ input {
   background-color: #fff;
 }
 .content.no-right.no-right .center-content {
-  width: 100%;
+  /*width: 100%;*/
 }
 .content.no-left .content {
   background: none;
@@ -231,15 +232,44 @@ input {
   box-shadow: none;
 }
 .left-nav {
-  padding-bottom: 10px;
   background-color: #f5f5f5;
+
+  .filter-group {
+    display: none;
+  }
 }
 .left-nav .title {
   padding: 20px 20px;
   background-color: #e0e0e0;
   font-size: 14px;
   color: #999999;
-  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.left-nav .left-nav__button {
+  border: 1px solid #d75124;
+  background-color: #e35121;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left-nav-open {
+  .filter-group {
+    display: block;
+  }
+  .left-nav__button svg {
+    transform: rotate(180deg);
+  }
+  .left-nav-title {
+    margin-bottom: 0;
+  }
+  .left-nav {
+    padding-bottom: 0;
+  }
 }
 .left-nav ul {
   margin: 0;
@@ -547,7 +577,7 @@ input {
 }
 .filter-group .item {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   column-gap: 20px;
 }
 .filter-group .item.item6 {
@@ -613,7 +643,7 @@ input {
   margin-right: 20px;
 }
 .filter-group .item .item-inner .inp {
-  float: left;
+
 }
 .sel-style1 {
   padding: 4px;
@@ -635,18 +665,22 @@ input {
   margin-right: 5px;
 }
 .filter-group .item.item2 {
-  margin-right: 15px;
+
 }
 .filter-group .item.item2 .item-inner .name {
   width: 70px;
 }
 .filter-group .item .item-inner .checkbox {
-  float: left;
-  margin-right: 5px;
+  cursor: pointer;
 }
 .filter-group .item .item-inner .checkbox-name {
-  float: left;
+  width: 100%;
+  height: 100%;
   padding-top: 2px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
 }
 .filter-group .item.item3 .item-inner {
   padding-bottom: 8px;
@@ -681,6 +715,7 @@ input {
   border-radius: 3px;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   width: 148px;
+  align-self: center;
 }
 .bt-style1:hover {
   background-image: none;
@@ -2040,7 +2075,10 @@ h3.title-tyres {
   padding-top: 5px;
 }
 .filter-group .item .sel-style1 {
-  width: 150px;
+  width: 100%;
+  height: 40px;
+  border-radius: 3px;
+  border-color: #b5b5b5;
 }
 #ProductIndexForm .item.bt.bt2 {
   margin-top: -5px;
@@ -3084,10 +3122,11 @@ table.withlines {
   width: 115px;
 }
 .filter-group.tyres .item.item2 .item-inner .name {
-  width: 60px;
+  width: 100%;
+  margin-bottom: 5px;
 }
 .filter-group .item.item3.col-r {
-  float: right;
+
 }
 .filter-group .item.item3.col-l,
 .filter-group .item.item3.col-r {
@@ -3095,8 +3134,21 @@ table.withlines {
 }
 .filter-group .item.item3.col-l .item-inner,
 .filter-group .item.item3.col-r .item-inner {
-  margin-right: 10px;
-  padding: 0;
+  padding: 0 5px;
+  margin-bottom: 15px;
+
+  display: flex;
+  height: 40px;
+  align-items: center;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  border: 1px solid #b5b5b5;
+}
+.filter-group .item.item3.col-r .item-inner__label {
+  width: 115px;
+  color: #000000;
+  font-size: 14px;
+  padding-top: 7px;
 }
 
 .filter-group.disks .item.item3 .item-inner {
