--- a/app/webroot/css/lightbox.css
+++ b/app/webroot/css/lightbox.css
@@ -27,6 +27,8 @@
 	z-index: 100;
 	text-align: center;
 	line-height: 0;
+	max-width: 100vw;
+	max-height: 50vh;
 }
 #jquery-lightbox a img { border: none; }
 #lightbox-container-image-box {
@@ -35,16 +37,24 @@
 	width: 250px;
 	height: 250px;
 	margin: 0 auto;
+	max-width: 100%;
+	max-height: inherit;
+	display: flex;
 }
-#lightbox-container-image { padding: 10px; }
+#lightbox-image { width: 100%; object-fit: contain; height: 100%; }
+#lightbox-container-image { padding: 10px; margin: inherit; }
+#lightbox-container-image img { width: 100%; }
 #lightbox-loading {
 	position: absolute;
 	top: 40%;
-	left: 0%;
-	height: 25%;
-	width: 100%;
+	left: 0;
+	right: 0;
+	height: 30px;
+	width: 30px;
 	text-align: center;
 	line-height: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 #lightbox-nav {
 	position: absolute;
@@ -78,6 +88,7 @@
 	overflow: auto;
 	width: 100%;
 	padding: 0 10px 0;
+	max-width: 100vw;
 }
 #lightbox-container-image-data {
 	padding: 0 10px; 
