--- a/app/webroot/css/lightbox.css
+++ b/app/webroot/css/lightbox.css
@@ -88,7 +88,7 @@
 	overflow: auto;
 	width: 100%;
 	padding: 0 10px 0;
-	max-width: 100vw;
+	max-width: calc(100vw - 20px);
 }
 #lightbox-container-image-data {
 	padding: 0 10px; 
