--- a/app/webroot/css/main-style.css
+++ b/app/webroot/css/main-style.css
@@ -407,6 +407,9 @@ input {
   padding-bottom: 20px;
   overflow: hidden;
 }
+.article-page {
+  overflow: hidden;
+}
 .block-home h2 {
   margin: 0;
   padding: 0;
